@@ -22,6 +22,22 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertThat;
 
+import com.facebook.buck.core.build.context.BuildContext;
+import com.facebook.buck.core.cell.TestCellPathResolver;
+import com.facebook.buck.core.cell.resolver.CellPathResolver;
+import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.InternalFlavor;
+import com.facebook.buck.core.rulekey.RuleKey;
+import com.facebook.buck.core.rulekey.RuleKeyObjectSink;
+import com.facebook.buck.core.rules.SourcePathRuleFinder;
+import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
+import com.facebook.buck.core.sourcepath.PathSourcePath;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
+import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
+import com.facebook.buck.core.toolchain.tool.Tool;
+import com.facebook.buck.core.toolchain.tool.impl.CommandTool;
+import com.facebook.buck.core.toolchain.tool.impl.HashedFileTool;
 import com.facebook.buck.cxx.toolchain.Compiler;
 import com.facebook.buck.cxx.toolchain.CxxPlatformUtils;
 import com.facebook.buck.cxx.toolchain.DefaultCompiler;
@@ -29,24 +45,10 @@ import com.facebook.buck.cxx.toolchain.GccCompiler;
 import com.facebook.buck.cxx.toolchain.GccPreprocessor;
 import com.facebook.buck.cxx.toolchain.Preprocessor;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
-import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.rules.BuildContext;
-import com.facebook.buck.rules.CellPathResolver;
-import com.facebook.buck.rules.CommandTool;
-import com.facebook.buck.rules.DefaultSourcePathResolver;
 import com.facebook.buck.rules.FakeBuildContext;
+import com.facebook.buck.rules.FakeBuildRule;
 import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.HashedFileTool;
-import com.facebook.buck.rules.PathSourcePath;
-import com.facebook.buck.rules.RuleKey;
-import com.facebook.buck.rules.RuleKeyObjectSink;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.SourcePathResolver;
-import com.facebook.buck.rules.SourcePathRuleFinder;
-import com.facebook.buck.rules.TestBuildRuleResolver;
-import com.facebook.buck.rules.TestCellPathResolver;
-import com.facebook.buck.rules.Tool;
 import com.facebook.buck.rules.args.RuleKeyAppendableFunction;
 import com.facebook.buck.rules.args.StringArg;
 import com.facebook.buck.rules.coercer.FrameworkPath;
@@ -90,10 +92,11 @@ public class CxxPreprocessAndCompileTest {
           .addPlatformFlags(StringArg.of("-fsanitize=address"))
           .addRuleFlags(StringArg.of("-O3"))
           .build();
-  private static final Path DEFAULT_OUTPUT = Paths.get("test.o");
+  private static final String DEFAULT_OUTPUT = "test.o";
   private static final SourcePath DEFAULT_INPUT = FakeSourcePath.of("test.cpp");
   private static final CxxSource.Type DEFAULT_INPUT_TYPE = CxxSource.Type.CXX;
-  private static final Path DEFAULT_WORKING_DIR = Paths.get(System.getProperty("user.dir"));
+  private static final PathSourcePath DEFAULT_WORKING_DIR =
+      FakeSourcePath.of(System.getProperty("user.dir"));
   private static final RuleKeyAppendableFunction<FrameworkPath, Path>
       DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION =
           new DefaultFramworkPathSearchPathAppendableFunction();
@@ -132,7 +135,7 @@ public class CxxPreprocessAndCompileTest {
 
   @Test
   public void inputChangesCauseRuleKeyChangesForCompilation() throws Exception {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestBuildRuleResolver());
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
     SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     FakeFileHashCache hashCache =
@@ -156,7 +159,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -164,8 +167,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
 
     // Verify that changing the compiler causes a rulekey change.
 
@@ -175,7 +177,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         new GccCompiler(
@@ -186,8 +188,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
     assertNotEquals(defaultRuleKey, compilerChange);
 
     // Verify that changing the operation causes a rulekey change.
@@ -198,16 +199,18 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new PreprocessorDelegate(
-                        CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
                         DEFAULT_WORKING_DIR,
                         DEFAULT_PREPROCESSOR,
                         PreprocessorFlags.builder().build(),
                         DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION,
                         Optional.empty(),
-                        /* leadingIncludePaths */ Optional.empty()),
+                        /* leadingIncludePaths */ Optional.empty(),
+                        Optional.of(
+                            new FakeBuildRule(target.withFlavors(InternalFlavor.of("deps")))),
+                        ImmutableSortedSet.of()),
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -216,8 +219,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
                     Optional.empty(),
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
     assertNotEquals(defaultRuleKey, operationChange);
 
     // Verify that changing the platform flags causes a rulekey change.
@@ -228,7 +230,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -239,8 +241,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
     assertNotEquals(defaultRuleKey, platformFlagsChange);
 
     // Verify that changing the rule flags causes a rulekey change.
@@ -251,7 +252,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -262,8 +263,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
     assertNotEquals(defaultRuleKey, ruleFlagsChange);
 
     // Verify that changing the input causes a rulekey change.
@@ -274,7 +274,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -282,15 +282,14 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_OUTPUT,
                     FakeSourcePath.of("/root/different"),
                     DEFAULT_INPUT_TYPE,
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
     assertNotEquals(defaultRuleKey, inputChange);
   }
 
   @Test
   public void preprocessorFlagsRuleKeyChangesCauseRuleKeyChangesForPreprocessing()
       throws Exception {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestBuildRuleResolver());
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
     SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     FakeFileHashCache hashCache =
@@ -313,16 +312,18 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new PreprocessorDelegate(
-                        CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
                         DEFAULT_WORKING_DIR,
                         DEFAULT_PREPROCESSOR,
                         flags,
                         DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION,
                         Optional.empty(),
-                        /* leadingIncludePaths */ Optional.empty()),
+                        /* leadingIncludePaths */ Optional.empty(),
+                        Optional.of(
+                            new FakeBuildRule(target.withFlavors(InternalFlavor.of("deps")))),
+                        ImmutableSortedSet.of()),
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -331,8 +332,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
                     Optional.empty(),
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
       }
     }
     TestData testData = new TestData();
@@ -347,30 +347,29 @@ public class CxxPreprocessAndCompileTest {
   @Test
   public void usesCorrectCommandForCompile() {
     // Setup some dummy values for inputs to the CxxPreprocessAndCompile.
-    SourcePathResolver pathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestBuildRuleResolver()));
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
+    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     CxxToolFlags flags =
         CxxToolFlags.explicitBuilder()
             .addPlatformFlags(StringArg.of("-ffunction-sections"))
             .addRuleFlags(StringArg.of("-O3"))
             .build();
-    Path output = Paths.get("test.o");
+    String outputName = "test.o";
     Path input = Paths.get("test.ii");
-    Path scratchDir = Paths.get("scratch");
 
     CxxPreprocessAndCompile buildRule =
         CxxPreprocessAndCompile.compile(
             target,
             projectFilesystem,
-            ImmutableSortedSet.of(),
+            ruleFinder,
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER, DEFAULT_COMPILER, flags),
-            output,
+            outputName,
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
 
     ImmutableList<String> expectedCompileCommand =
         ImmutableList.<String>builder()
@@ -378,12 +377,12 @@ public class CxxPreprocessAndCompileTest {
             .add("-x", "c++")
             .add("-ffunction-sections")
             .add("-O3")
+            .add("-o", "buck-out/gen/foo/bar__/test.o")
             .add("-c")
             .add(input.toString())
-            .add("-o", output.toString())
             .build();
     ImmutableList<String> actualCompileCommand =
-        buildRule.makeMainStep(pathResolver, scratchDir, false).getCommand();
+        buildRule.makeMainStep(context, false).getCommand();
     assertEquals(expectedCompileCommand, actualCompileCommand);
   }
 
@@ -397,30 +396,31 @@ public class CxxPreprocessAndCompileTest {
     SourcePath compiler = FakeSourcePath.of(projectFilesystem, "compiler");
     Tool compilerTool = new CommandTool.Builder().addInput(compiler).build();
 
-    SourcePathResolver pathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestBuildRuleResolver()));
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
+    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
 
     projectFilesystem.writeContentsToPath(
         "test.o: " + pathResolver.getRelativePath(DEFAULT_INPUT) + " ",
-        projectFilesystem.getPath("test.o.dep"));
+        projectFilesystem.getPath("buck-out/gen/foo/bar__/test.o.dep"));
     PathSourcePath fakeInput = FakeSourcePath.of(projectFilesystem, "test.cpp");
 
     CxxPreprocessAndCompile cxxPreprocess =
         CxxPreprocessAndCompile.preprocessAndCompile(
             target,
             projectFilesystem,
-            ImmutableSortedSet.of(),
+            ruleFinder,
             new PreprocessorDelegate(
-                CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
                 DEFAULT_WORKING_DIR,
                 new GccPreprocessor(preprocessorTool),
                 PreprocessorFlags.builder().build(),
                 DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION,
                 Optional.empty(),
-                /* leadingIncludePaths */ Optional.empty()),
+                /* leadingIncludePaths */ Optional.empty(),
+                Optional.of(new FakeBuildRule(target.withFlavors(InternalFlavor.of("deps")))),
+                ImmutableSortedSet.of()),
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 DEFAULT_COMPILER,
@@ -429,8 +429,7 @@ public class CxxPreprocessAndCompileTest {
             fakeInput,
             DEFAULT_INPUT_TYPE,
             Optional.empty(),
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
     assertThat(
         cxxPreprocess.getInputsAfterBuildingLocally(context, cellPathResolver),
         hasItem(preprocessor));
@@ -439,7 +438,7 @@ public class CxxPreprocessAndCompileTest {
         CxxPreprocessAndCompile.compile(
             target,
             projectFilesystem,
-            ImmutableSortedSet.of(),
+            ruleFinder,
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 new GccCompiler(compilerTool),
@@ -447,20 +446,19 @@ public class CxxPreprocessAndCompileTest {
             DEFAULT_OUTPUT,
             fakeInput,
             DEFAULT_INPUT_TYPE,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
     assertThat(
         cxxCompile.getInputsAfterBuildingLocally(context, cellPathResolver), hasItem(compiler));
   }
 
   @Test
   public void usesColorFlagForCompilationWhenRequested() {
-    SourcePathResolver pathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestBuildRuleResolver()));
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
+    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    Path output = Paths.get("test.o");
+    String output = "test.o";
     Path input = Paths.get("test.ii");
-    Path scratchDir = Paths.get("scratch");
 
     CompilerDelegate compilerDelegate =
         new CompilerDelegate(
@@ -472,50 +470,46 @@ public class CxxPreprocessAndCompileTest {
         CxxPreprocessAndCompile.compile(
             target,
             projectFilesystem,
-            ImmutableSortedSet.of(),
+            ruleFinder,
             compilerDelegate,
             output,
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
 
     ImmutableList<String> command =
-        buildRule
-            .makeMainStep(pathResolver, buildRule.getProjectFilesystem().getRootPath(), false)
-            .getArguments(/* allowColorsInDiagnostics */ false);
+        buildRule.makeMainStep(context, false).getArguments(/* allowColorsInDiagnostics */ false);
     assertThat(command, not(hasItem(CompilerWithColorSupport.COLOR_FLAG)));
 
     command =
-        buildRule
-            .makeMainStep(pathResolver, scratchDir, false)
-            .getArguments(/* allowColorsInDiagnostics */ true);
+        buildRule.makeMainStep(context, false).getArguments(/* allowColorsInDiagnostics */ true);
     assertThat(command, hasItem(CompilerWithColorSupport.COLOR_FLAG));
   }
 
   @Test
   public void usesColorFlagForPreprocessingWhenRequested() {
-    SourcePathResolver pathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestBuildRuleResolver()));
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
+    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    Path output = Paths.get("test.ii");
+    String output = "test.ii";
     Path input = Paths.get("test.cpp");
-    Path scratchDir = Paths.get("scratch");
 
     CxxPreprocessAndCompile buildRule =
         CxxPreprocessAndCompile.preprocessAndCompile(
             target,
             projectFilesystem,
-            ImmutableSortedSet.of(),
+            ruleFinder,
             new PreprocessorDelegate(
-                CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
                 DEFAULT_WORKING_DIR,
                 PREPROCESSOR_WITH_COLOR_SUPPORT,
                 PreprocessorFlags.builder().build(),
                 DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION,
                 Optional.empty(),
-                /* leadingIncludePaths */ Optional.empty()),
+                /* leadingIncludePaths */ Optional.empty(),
+                Optional.of(new FakeBuildRule(target.withFlavors(InternalFlavor.of("deps")))),
+                ImmutableSortedSet.of()),
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 COMPILER_WITH_COLOR_SUPPORT,
@@ -524,19 +518,14 @@ public class CxxPreprocessAndCompileTest {
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
             Optional.empty(),
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
 
     ImmutableList<String> command =
-        buildRule
-            .makeMainStep(pathResolver, scratchDir, false)
-            .getArguments(/* allowColorsInDiagnostics */ false);
+        buildRule.makeMainStep(context, false).getArguments(/* allowColorsInDiagnostics */ false);
     assertThat(command, not(hasItem(PreprocessorWithColorSupport.COLOR_FLAG)));
 
     command =
-        buildRule
-            .makeMainStep(pathResolver, scratchDir, false)
-            .getArguments(/* allowColorsInDiagnostics */ true);
+        buildRule.makeMainStep(context, false).getArguments(/* allowColorsInDiagnostics */ true);
     assertThat(command, hasItem(CompilerWithColorSupport.COLOR_FLAG));
   }
 
